Fix spelling of deprecated in warnings (#4598)

--- a/src/themes/eui-amsterdam/global_styling/mixins/_shadow.scss
+++ b/src/themes/eui-amsterdam/global_styling/mixins/_shadow.scss
@@ -20,7 +20,7 @@
     0 4.5px 10px rgba($color, shadowOpacity(.05));
 
   @if ($opacity > 0) {
-    @warn 'The $opacity variable of euiBottomShadowSmall() will be depricated in a future version of EUI.';
+    @warn 'The $opacity variable of euiBottomShadowSmall() will be deprecated in a future version of EUI.';
   }
 }
 
@@ -32,7 +32,7 @@
     0 15px 15px -1px rgba($color, shadowOpacity(.04));
 
   @if ($opacity > 0) {
-    @warn 'The $opacity variable of euiBottomShadowMedium() will be depricated in a future version of EUI.';
+    @warn 'The $opacity variable of euiBottomShadowMedium() will be deprecated in a future version of EUI.';
   }
 }
 
@@ -46,7 +46,7 @@
     0 0 17px rgba($color, shadowOpacity(.03));
 
   @if ($opacity > 0) {
-    @warn 'The $opacity variable of euiBottomShadowFlat() will be depricated in a future version of EUI.';
+    @warn 'The $opacity variable of euiBottomShadowFlat() will be deprecated in a future version of EUI.';
   }
 }
 
@@ -64,7 +64,7 @@
     0 23px 35px rgba($color, shadowOpacity(.05));
 
   @if ($opacity > 0) {
-    @warn 'The $opacity variable of euiBottomShadow() will be depricated in a future version of EUI.';
+    @warn 'The $opacity variable of euiBottomShadow() will be deprecated in a future version of EUI.';
   }
 }
 
@@ -87,7 +87,7 @@
   }
 
   @if ($opacity > 0) {
-    @warn 'The $opacity variable of euiBottomShadowLarge() will be depricated in a future version of EUI.';
+    @warn 'The $opacity variable of euiBottomShadowLarge() will be deprecated in a future version of EUI.';
   }
 }
 
@@ -99,6 +99,6 @@
     0 23px 35px rgba($color, shadowOpacity(.05));
 
   @if ($opacity > 0) {
-    @warn 'The $opacity variable of euiSlightShadowHover() will be depricated in a future version of EUI.';
+    @warn 'The $opacity variable of euiSlightShadowHover() will be deprecated in a future version of EUI.';
   }
 }
