[EuiComboBox] Fixed options list misalignment (#4607)
* Fixed EuiComboBox options list misalignment

* Added changelog

* Update CHANGELOG.md

Co-authored-by: Greg Thompson <thompson.glowe@gmail.com>

--- a/src/components/combo_box/combo_box_options_list/_combo_box_options_list.scss
+++ b/src/components/combo_box/combo_box_options_list/_combo_box_options_list.scss
@@ -5,6 +5,7 @@
 .euiComboBoxOptionsList {
   // Remove transforms from popover panel
   transform: none !important; // sass-lint:disable-line no-important
+  top: 0;
 
   &.euiPopover__panel-isAttached.euiComboBoxOptionsList--top { /* 1 */
     @include euiBottomShadowFlat;
